<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">O-FISH</string>
    <string name="no">no</string>
    <string name="empty" />
    <string name="prefill_vessel_dialog_title">Prefill Vessel Information From Previous Boarding?</string>
    <string name="prefill_vessel_dialog_description">You\'ll still be able to edit or clear fields</string>
    <string name="prefill_vessel_dialog_yes">Prefill</string>
    <string name="vessel_name">Vessel Name</string>
    <string name="vessel">Vessel</string>
    <string name="vessel_information">Vessel Information</string>
    <string name="add_an_attachment">Add Photo or Note</string>
    <string name="permit_number">Permit Number</string>
    <string name="home_port">Home Port</string>
    <string name="last_delivery">Last Delivery</string>
    <string name="date">Date</string>
    <string name="yes">yes</string>
    <string name="business">Business</string>
    <string name="add_ems">Add Electronic Monitoring System</string>
    <string name="location">Location</string>
    <string name="remove_ems">Remove EMS</string>
    <string name="flag_state">Flag State</string>
    <string name="electronic_monitoring_system">Electronic Monitoring System</string>
    <string name="ems_type">EMS Type</string>
    <string name="registry_number">Registry Number</string>
    <string name="crew_next">Crew\t\t\u279C</string>
    <string name="select_attachment_dialog_title">Please select an Attachment</string>
    <string name="select_attachment_dialog_message">You can add Note or Photo as Attachment</string>
    <string name="select_attachment_dialog_note">Note</string>
    <string name="select_attachment_dialog_photo">Photo</string>
    <string name="new_business">New Business</string>
    <string name="photos">Photos:</string>
    <string name="remove_note">Remove Note</string>
    <string name="enter_new_business_name">Enter the new business name</string>
    <string name="cancel">Cancel</string>
    <string name="menu_save_report">Save</string>
    <string name="menu_cancel_report">Cancel Boarding</string>
    <string name="skip_sections_dialog_title">Skip the following sections?</string>
    <string name="skip_sections_dialog_yes">Skip</string>
    <string name="flag_state_title">Flag State</string>
    <string name="crew">Crew</string>
    <string name="crew_member_name">Crew member name</string>
    <string name="crew_member_license_number">License Number</string>
    <string name="crew_member_add_member">Add crew member</string>
    <string name="crew_member_remove_member">Remove %s</string>
    <string name="activity_next">Activity\t\t\u279C</string>
    <string name="license_number">License Number %s</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="basic_information">Basic Information</string>
    <string name="time">Time</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="vessel_next">Vessel\t\t\u279C</string>
    <string name="set_location_manually">Set your location manually</string>
    <string name="activity">Activity</string>
    <string name="fishery">Fishery</string>
    <string name="fishery_species">Species</string>
    <string name="gear">Gear</string>
    <string name="note">Note</string>
    <string name="catch_next">Catch\t\t\u279C</string>
    <string name="no_catch">No Catch</string>
    <string name="violation">Violation</string>
    <string name="violation_add_violation">Add violation</string>
    <string name="violation_seizures">Seizures</string>
    <string name="violation_description">Description</string>
    <string name="result_of_violation">Result of Violation</string>
    <string name="warning">Warning</string>
    <string name="citation">Citation</string>
    <string name="remove_violation">Remove %1$s</string>
    <string name="risk_next">Risk\t\t\u279C</string>
    <string name="issued_to">Issued to</string>
    <string name="add_crew_member">Crew Member</string>
    <string name="password">Password</string>
    <string name="email_username">Email/Username</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="processing">Processing</string>
    <string name="risk">Risk</string>
    <string name="green">Green</string>
    <string name="amber">Amber</string>
    <string name="red">Red</string>
    <string name="reason_for_risk">Reason for %1$s</string>
    <string name="notes_next">Notes\t\t\u279C</string>
    <string name="notes">Notes</string>
    <string name="btn_save">Save</string>
    <string name="notes_add_note">Add Note</string>
    <string name="new_note">New Note</string>
    <string name="at_sea">At Sea</string>
    <string name="not_at_sea">Not At Sea</string>
    <string name="you_are_not_at_sea">You\'re currently Not At Sea</string>
    <string name="change_status_to_at_sea">Change status to "At Sea"?</string>
    <string name="board_vessel">Board Vessel</string>
    <string name="find_records">Find Records</string>
    <string name="draft_boardings">Draft Boardings</string>
    <string name="first_last_name">%s %s</string>
    <string name="logout_dialog_title">Logout?</string>
    <string name="logout_dialog_message">You can only log back in once you have cellular service or are connected to WiFi with Internet.
All draft boardings will be deleted!</string>
    <string name="logout_dialog_yes">Yes</string>
    <string name="profile_toolbar_title">Officer Profile</string>
    <string name="profile_toolbar_close">Close</string>
    <string name="profile_image_select">Change profile picture</string>
    <plurals name="crew_member_size">
        <item quantity="one">%d Crew Member</item>
        <item quantity="other">%d Crew Members</item>
    </plurals>
    <string name="records_permit_number">Permit # %s</string>
    <string name="record_last_contact">Last contact %1$tB %1$td, %1$tY</string>
    <string name="recently_boarded">Recently Boarded Vessels</string>
    <string name="no_results_for">No results for \"%s\"</string>
    <string name="boarding_record">Boarding Record</string>
    <string name="description">Description</string>
    <string name="captain">Captain</string>
    <string name="report_catch">Catch</string>
    <string name="report_note_indexed">Note %d</string>
    <string name="captains_name">Captains Name</string>
    <string name="report_date">%1$tB %1$td, %1$tY</string>
    <string name="report_crew_count">Crew (%d)</string>
    <string name="report_catch_count">Catch (%d)</string>
    <string name="report_violations_count">Violations (%d)</string>
    <string name="catch_title">Catch</string>
    <string name="add_catch">Add Catch</string>
    <string name="species">Species</string>
    <string name="weight">Weight</string>
    <string-array name="amount">
        <item>Weight</item>
        <item>Count</item>
        <item>Weight &amp; Count</item>
    </string-array>
    <string name="count">Count</string>
    <string name="remove_catch">Remove Catch %1$d</string>
    <string name="violation_next">Violation\t\t\u279C</string>
    <string-array name="weight_units">
        <item>kg</item>
        <item>tonnes</item>
        <item>lbs</item>
        <item>tons</item>
    </string-array>
    <string name="crew_member">Crew Member</string>
    <string name="add_crew_member_title">Add Crew Member</string>
    <string name="validation_error">Fill in all the fields</string>
    <string name="report_already_contains_captain">This report already contains a captain</string>
    <string name="replace_captain">Are you sure you want to replace the captain?</string>
    <string name="continue_editing">Continue editing</string>
    <string name="prefill_crew_dialog_title">Prefill Crew Information From Previous Boarding?</string>
    <string name="prefill_crew_dialog_description">You\'ll still be able to edit or clear fields</string>
    <string name="prefill_crew_dialog_yes">Prefill</string>
    <string name="previous_boardings">Previous Boardings</string>
    <string name="boardings">Boardings</string>
    <string name="warnings">Warnings</string>
    <string name="citations">Citations</string>
    <string name="zero_violations">0 Violations</string>
    <string name="warnings_count">%d Warnings</string>
    <string name="citation_count">%d Citations</string>
    <string name="warnings_citation_count">%d Warnings * %d Citations</string>
    <string name="back">Back</string>
    <string name="new_boarding">New Boarding</string>
    <string name="edit_boarding">Draft Boarding</string>
    <string name="add_new_vessel">Add New Vessel</string>
    <string name="duty_report">Duty Report</string>
    <string name="submit_boarding">Submit boarding?</string>
    <string name="you_left_blank">You left the following sections blank:</string>
    <string name="sure_to_submit">Are you sure you want to submit?</string>
    <string name="sure_to_submit_with_skipped">%s\n\nAre you sure you want to submit?</string>
    <string name="cancel_boarding">Cancel boarding?</string>
    <string name="board_not_saved">If canceled, this boarding will not be saved. You may however save it to finish later.</string>
    <string name="save_and_finish_later">Save and Finish Later</string>
    <string name="draft_saved">Draft Saved</string>
    <string name="delete_draft">Delete Boarding</string>
    <string name="draft_deleted">Draft Deleted</string>
    <string name="submit">Submit</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="boarding_submitted">Boarding Submitted!</string>
    <string name="boarding_canceled">Boarding Canceled</string>
    <string name="saving_error">An error occurred while saving</string>
    <string name="login_error">An error occurred while signing in</string>
    <string name="continue_with_empty_fields">Continue with empty fields?</string>
    <string name="continue_action">Continue</string>
    <string name="chose_image_source">Choose image source</string>
    <string name="channel_name">O-FISH notifications</string>
    <string name="channel_description">O-FISH will show on duty reminders</string>
    <string name="time_at_sea">Time At Sea</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="patrol_summary">Patrol Summary</string>
    <string name="become_not_at_sea">Become not at sea</string>
    <string name="boarding_count">%d Boardings</string>
    <string name="formatted_draft">%d Drafts</string>
    <string name="error_start_date">Start date should be before End date</string>
    <string name="error_end_date">End date should be after Start date</string>
    <string name="error_date_in_future">Please set correct date</string>
    <string name="risk_no_notes_or_photos">No Notes or Photos for Risk</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="not_at_sea_message">Please take into account that \'Not At Sea\' turns off automatically while logout</string>
    <string name="violation_save_msg">This field is required for saving Violation</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="DARK_MODE_STATE">darkModeState</string>
    <string name="DARK_MODE_ENABLED">darkModeEnabled</string>
</resources>