<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="org.wildaid.ofish.ui.violation.ViolationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_screen_with_cards">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/scroll_bottom_padding">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/violation_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_edit_violation" />

                <TextView
                    android:id="@+id/violation_add_footer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_add"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:paddingTop="24dp"
                    android:paddingBottom="24dp"
                    android:text="@string/violation_add_violation"
                    android:textColor="@color/main_blue"
                    android:textSize="@dimen/add_remove_text_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/violation_recycler" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/background_card"
                    android:elevation="4dp"
                    android:padding="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/violation_add_footer">

                    <TextView
                        android:id="@+id/violation_seizures_header"
                        style="@style/CardHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/violation_seizures"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/violation_seizures_attach"
                        android:layout_width="@dimen/add_attachment_icon_size"
                        android:layout_height="@dimen/add_attachment_icon_size"
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_add_attachment"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/violation_seizure_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:endIconContentDescription="@string/vessel_name"
                        app:layout_constraintTop_toBottomOf="@id/violation_seizures_header">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/violation_seizure"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/violation_description"
                            android:text="@={viewmodel.currentReport.inspection.summary.seizures.text}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/violation_seizure_note_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:visibility="gone"
                        app:endIconContentDescription="@string/note"
                        app:layout_constraintTop_toBottomOf="@id/violation_seizure_input_layout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/violation_seizure_note"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/note" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btn_next"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewmodel.onNextClicked()}"
            android:text="@string/risk_next"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>